Added email feature via Gmail API